<resources>
    <string name="facebook_app_id">538871880208658</string>
    <string name="fb_login_protocol_scheme">fb538871880208658</string>

    <string name="app_name">Airporter</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="yes_value">1</string>
    <string name="failed_login">Incorrect login credentials</string>
    <string name="invalid_email_field">Invalid Email</string>
    <string name="invalid_password_field">Invalid Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="homeMenuItem">Home</string>
    <string name="orderMenuItem">Orders</string>
    <string name="offersMenuItemID">Offers</string>
    <string name="messageMenuItem">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_money">Make Money</string>
    <string name="shop_globally">Shop Globally</string>
    <string name="tab_shop">Shop</string>
    <string name="tab_earn">Earn</string>
    <string name="label_deliver_to">Deliver to</string>
    <string name="label_deliver_from">From</string>
    <string name="label_before">Before</string>
    <string name="product_price">Price:</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="reward">Reward</string>
    <string name="error_email_empty">Email field cannot be left empty</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="error_password_empty">Password field cannot be left empty</string>
    <string name="tab_sent_offers">Sent</string>
    <string name="tab_received_offers">Received</string>
    <string name="offer_submitted_by">Submitted By:</string>
    <string name="reward_label">Reward:</string>
    <string name="original_product_price">Product Price:</string>
    <string name="offer_price">Offer Price:</string>
    <string name="withdraw_offer">WITHDRAW</string>
    <string name="modify_offer">MODIFY</string>
    <string name="with">with</string>
    <string name="type_message_here">Enter your message here...</string>
    <string name="tab_item_requested">Requested</string>
    <string name="tab_item_in_transit">In Transit</string>
    <string name="tab_item_received">Received</string>
    <string name="tab_item_delivered">Delivered</string>
    <string name="logout">Logout</string>
    <string name="click_to_see_offers">Click to see all offers</string>
</resources>
