<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewBidderId"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

            <ImageButton
                android:id="@+id/imageButtonAcceptOfferId"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageButtonRejectOfferId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/accept_offer_mdpi_24dp" />

            <ImageButton
                android:id="@+id/imageButtonRejectOfferId"
                android:layout_width="40dp"
                android:layout_height="0dp"
                app:layout_constrainedWidth="false"
                app:layout_constraintBottom_toTopOf="@+id/imageButtonMessageBidderId"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonAcceptOfferId"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonAcceptOfferId"
                app:srcCompat="@drawable/cancel_offer_36dp" />

            <ImageButton
                android:id="@+id/imageButtonMessageBidderId"
                android:layout_width="40dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageButtonRejectOfferId"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonRejectOfferId"
                app:srcCompat="@drawable/offer_chat_mdpi_24dp" />

            <TextView
                android:id="@+id/labelTextViewSubmittedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/offer_submitted_by"
                app:layout_constraintStart_toStartOf="@+id/imageViewBidderId"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBidderId" />

            <TextView
                android:id="@+id/textViewBidderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/labelTextViewSubmittedBy"
                app:layout_constraintTop_toTopOf="@+id/labelTextViewSubmittedBy"
                tools:text="Bidder Name" />

            <TextView
                android:id="@+id/labelTextViewProductPriceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/original_product_price"
                app:layout_constraintStart_toStartOf="@+id/labelTextViewSubmittedBy"
                app:layout_constraintTop_toBottomOf="@+id/labelTextViewSubmittedBy" />

            <TextView
                android:id="@+id/textViewProductpriceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/labelTextViewProductPriceId"
                app:layout_constraintTop_toBottomOf="@+id/textViewBidderName"
                tools:text="product price" />

            <TextView
                android:id="@+id/labelTextViewOfferPriceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/offer_price"
                app:layout_constraintStart_toStartOf="@+id/labelTextViewProductPriceId"
                app:layout_constraintTop_toBottomOf="@+id/labelTextViewProductPriceId" />

            <TextView
                android:id="@+id/textViewOfferPriceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/labelTextViewOfferPriceId"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductpriceId"
                tools:text="offer price" />

            <TextView
                android:id="@+id/labelTextViewRewardId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/reward_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/labelTextViewOfferPriceId"
                app:layout_constraintTop_toBottomOf="@+id/labelTextViewOfferPriceId" />

            <TextView
                android:id="@+id/textViewRewardId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/labelTextViewRewardId"
                app:layout_constraintTop_toBottomOf="@+id/textViewOfferPriceId"
                tools:text="@string/reward" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>