<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/textYellow"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/displayImageViewId"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_userimage_xhdpi_48dp" />

            <ImageView
                android:id="@+id/productImageViewId"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/displayImageViewId"
                app:srcCompat="@drawable/default_productimage_xxhdpi_48dp" />

            <TextView
                android:id="@+id/shopperNameTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/displayImageViewId"
                app:layout_constraintStart_toEndOf="@+id/displayImageViewId"
                app:layout_constraintTop_toTopOf="@+id/displayImageViewId"
                tools:text="shopper name" />

            <TextView
                android:id="@+id/productTitleTextViewId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minLines="2"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/productImageViewId"
                app:layout_constraintTop_toTopOf="@+id/productImageViewId"
                tools:text="product title" />

            <TextView
                android:id="@+id/deliverToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_deliver_to"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/productTitleTextViewId"
                app:layout_constraintTop_toBottomOf="@+id/productTitleTextViewId" />

            <TextView
                android:id="@+id/deliverToTextViewid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/deliverToLabel"
                app:layout_constraintTop_toTopOf="@+id/deliverToLabel"
                tools:text="@string/label_deliver_to" />

            <TextView
                android:id="@+id/deliverFromLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_deliver_from"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/deliverToLabel"
                app:layout_constraintTop_toBottomOf="@+id/deliverToLabel" />

            <TextView
                android:id="@+id/deliverFromTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/deliverFromLabel"
                app:layout_constraintTop_toTopOf="@+id/deliverFromLabel"
                tools:text="@string/label_deliver_from" />

            <TextView
                android:id="@+id/deliverBeforeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_before"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/deliverFromLabel"
                app:layout_constraintTop_toBottomOf="@+id/deliverFromLabel" />

            <TextView
                android:id="@+id/deliverBeforeTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/deliverBeforeLabel"
                app:layout_constraintStart_toEndOf="@+id/deliverBeforeLabel"
                app:layout_constraintTop_toTopOf="@+id/deliverBeforeLabel"
                tools:text="@string/label_before" />

            <TextView
                android:id="@+id/productPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/product_price"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/productPriceTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/productPriceLabel"
                app:layout_constraintStart_toEndOf="@+id/productPriceLabel"
                app:layout_constraintTop_toTopOf="@+id/productPriceLabel"
                tools:text="@string/product_price" />

            <TextView
                android:id="@+id/textViewOfferPriceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/labelOfferPrice"
                app:layout_constraintStart_toEndOf="@+id/labelOfferPrice"
                app:layout_constraintTop_toTopOf="@+id/labelOfferPrice"
                tools:text="@string/offer_price" />

            <TextView
                android:id="@+id/labelOfferPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/offer_price"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/productPriceTextViewId"
                app:layout_constraintStart_toEndOf="@+id/productPriceTextViewId"
                app:layout_constraintTop_toTopOf="@+id/productPriceTextViewId" />

            <TextView
                android:id="@+id/labelReward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/reward_label"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/textViewOfferPriceId"
                app:layout_constraintStart_toEndOf="@+id/textViewOfferPriceId"
                app:layout_constraintTop_toTopOf="@+id/textViewOfferPriceId" />

            <TextView
                android:id="@+id/textViewRewardId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/labelReward"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/labelReward"
                app:layout_constraintTop_toTopOf="@+id/labelReward"
                tools:text="@string/reward" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/deliverBeforeLabel"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>